--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    "Hello World, we are software developers!"
+    <div id="main">
+    <h1>"Doctor Norman Borlaug</h1>
+    <div id="img-div">
+        <img id="image" src="https://media.istockphoto.com/photos/mature-mixed-race-business-man-picture-id1059661424?k=20&m=1059661424&s=612x612&w=0&h=CLL4tto10GPo1gtMR9c-kPmf8VkvodjvTyqvtEuTLtg=">
+        <div id="img-caption"> Senior Sorfware Developer</div>
+    </div>
+    </div>
     <!--
 
     Hello Camper!
