--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <div id="main">
     <h1>"Doctor Norman Borlaug</h1>
     <div id="img-div">
-        <img id="image" src="https://media.istockphoto.com/photos/mature-mixed-race-business-man-picture-id1059661424?k=20&m=1059661424&s=612x612&w=0&h=CLL4tto10GPo1gtMR9c-kPmf8VkvodjvTyqvtEuTLtg=">
+        <img  id="image" src="https://media.istockphoto.com/photos/mature-mixed-race-business-man-picture-id1059661424?k=20&m=1059661424&s=612x612&w=0&h=CLL4tto10GPo1gtMR9c-kPmf8VkvodjvTyqvtEuTLtg=">
         <div id="img-caption"> Senior Sorfware Developer</div>
     </div>
+    <div id="tribute-info">It is the page built with microverse peer!</div>
+    <a href="" target="_blank" id="tribute-link">Outside</a>
+
     </div>
     <!--
 
